<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".fragment.account.profile.verify.VerifyPhoneActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#80000000"
    android:backgroundTintMode="src_over"
    android:background="@drawable/img2"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/home_admob"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/verify"
            android:textSize="18dp"
            style="@style/text_view_style"
            android:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="18sp"
            app:itemCount="6"
            app:itemSpacing="0.8sp"
            app:itemHeight="50dp"
            app:itemRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvcountDown"
            app:lineColor="@color/colorPrimary"
            app:viewType="rectangle" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="CONTINUE"
            android:textAllCaps="false"
            android:textColor="#cdd8f1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinView" />

        <TextView
            android:id="@+id/resendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/resend_code"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:visibility="gone"
            style="@style/text_view_style"
            android:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="@+id/pinView"
            app:layout_constraintTop_toBottomOf="@+id/pinView" />

        <TextView
            android:id="@+id/tvcountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            style="@style/text_view_style"
            android:fontFamily="@font/montserrat"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/home_admob"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        app:adSize="SMART_BANNER"
        android:visibility="gone"
        app:adUnitId="@string/app_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>