<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_Photo_Request"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img2"
    android:backgroundTint="#80000000"
    android:backgroundTintMode="src_over"
    tools:context=".fragment.account.profile.ui.PhotoRequestActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339">

                <TextView
                    android:id="@+id/btn_photo_rqst"
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/imagebg"
                    android:checked="true"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/Photo_request"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/photo_rqst_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/badge_circle"
                    android:gravity="center"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_photo_rqst"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_photo_rqst"
                    app:layout_constraintVertical_bias="0.525" />

                <TextView
                    android:id="@+id/btn_photo_permits"
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/imagebg"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:padding="1dp"

                    android:text="@string/Photo_permits"

                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_photo_rqst" />

                <TextView
                    android:id="@+id/photo_permits_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/badge_circle"
                    android:gravity="center"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_photo_permits"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_photo_permits"
                    app:layout_constraintVertical_bias="0.354" />

                <TextView
                    android:id="@+id/btn_given_permits"
                    style="@style/text_view_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/imagebg"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/given_permits"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_photo_permits" />

                <TextView
                    android:id="@+id/given_permits_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/badge_circle"
                    android:gravity="center"
                    android:text="1"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_given_permits"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_given_permits"
                    app:layout_constraintVertical_bias="0.714" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/home_admob"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            app:adSize="SMART_BANNER"
            android:visibility="gone"
            app:adUnitId="@string/app_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="42dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


